@@ -56,10 +56,6 @@ lib/SPVM/Sys/Process/Constant.c
 lib/SPVM/Sys/Process/Constant.config
 lib/SPVM/Sys/Process/Constant.pm
 lib/SPVM/Sys/Process/Constant.spvm
-lib/SPVM/Sys/Process/Tms.c
-lib/SPVM/Sys/Process/Tms.config
-lib/SPVM/Sys/Process/Tms.pm
-lib/SPVM/Sys/Process/Tms.spvm
 lib/SPVM/Sys/Socket.c
 lib/SPVM/Sys/Socket.config
 lib/SPVM/Sys/Socket.pm
@@ -143,6 +139,10 @@ lib/SPVM/Sys/Time/Timezone.c
 lib/SPVM/Sys/Time/Timezone.config
 lib/SPVM/Sys/Time/Timezone.pm
 lib/SPVM/Sys/Time/Timezone.spvm
+lib/SPVM/Sys/Time/Tms.c
+lib/SPVM/Sys/Time/Tms.config
+lib/SPVM/Sys/Time/Tms.pm
+lib/SPVM/Sys/Time/Tms.spvm
 lib/SPVM/Sys/User.c
 lib/SPVM/Sys/User.config
 lib/SPVM/Sys/User.pm
