@@ -3,6 +3,7 @@ class Sys::Time {
   use Sys::Time::Timezone;
   use Sys::Time::Itimerval;
   use Sys::Time::Timespec;
+  use Sys::Time::Tms;
   
   native static method gettimeofday : int ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
 
@@ -15,4 +16,6 @@ class Sys::Time {
   native static method setitimer : int ($which : int, $new_value : Sys::Time::Itimerval, $old_value : Sys::Time::Itimerval);
 
   native static method getitimer : int ($which : int, $curr_value : Sys::Time::Itimerval);
+
+  native static method times : long ($buffer : Sys::Time::Tms);
 }
