@@ -6,11 +6,11 @@
 #  include <sys/times.h>
 #endif
 
-static const char* FILE_NAME = "Sys/Process/Tms.c";
+static const char* FILE_NAME = "Sys/Time/Tms.c";
 
-int32_t SPVM__Sys__Process__Tms__new(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__new(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The new method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The new method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -18,7 +18,7 @@ int32_t SPVM__Sys__Process__Tms__new(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   struct tms* st_tms = env->new_memory_stack(env, stack, sizeof(struct tms));
 
-  void* obj_st_tms = env->new_pointer_by_name(env, stack, "Sys::Process::Tms", st_tms, &e, FILE_NAME, __LINE__);
+  void* obj_st_tms = env->new_pointer_by_name(env, stack, "Sys::Time::Tms", st_tms, &e, FILE_NAME, __LINE__);
   if (e) { return e; }
   
   stack[0].oval = obj_st_tms;
@@ -27,9 +27,9 @@ int32_t SPVM__Sys__Process__Tms__new(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The DESTROY method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The DESTROY method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -46,9 +46,9 @@ int32_t SPVM__Sys__Process__Tms__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__tms_utime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__tms_utime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The tms_utime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The tms_utime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -67,9 +67,9 @@ int32_t SPVM__Sys__Process__Tms__tms_utime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__set_tms_utime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__set_tms_utime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The set_tms_utime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The set_tms_utime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   void* obj_self = stack[0].oval;
@@ -88,9 +88,9 @@ int32_t SPVM__Sys__Process__Tms__set_tms_utime(SPVM_ENV* env, SPVM_VALUE* stack)
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__tms_stime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__tms_stime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The tms_stime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The tms_stime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -109,9 +109,9 @@ int32_t SPVM__Sys__Process__Tms__tms_stime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__set_tms_stime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__set_tms_stime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The set_tms_stime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The set_tms_stime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   void* obj_self = stack[0].oval;
@@ -130,9 +130,9 @@ int32_t SPVM__Sys__Process__Tms__set_tms_stime(SPVM_ENV* env, SPVM_VALUE* stack)
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The tms_cutime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The tms_cutime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -151,9 +151,9 @@ int32_t SPVM__Sys__Process__Tms__tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__set_tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__set_tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The set_tms_cutime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The set_tms_cutime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   void* obj_self = stack[0].oval;
@@ -172,9 +172,9 @@ int32_t SPVM__Sys__Process__Tms__set_tms_cutime(SPVM_ENV* env, SPVM_VALUE* stack
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__tms_cstime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__tms_cstime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The tms_cstime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The tms_cstime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   
@@ -193,9 +193,9 @@ int32_t SPVM__Sys__Process__Tms__tms_cstime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 }
 
-int32_t SPVM__Sys__Process__Tms__set_tms_cstime(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Sys__Time__Tms__set_tms_cstime(SPVM_ENV* env, SPVM_VALUE* stack) {
 #ifdef _WIN32
-  env->die(env, stack, "The set_tms_cstime method in the Sys::Process::Tms is not supported on this system", FILE_NAME, __LINE__);
+  env->die(env, stack, "The set_tms_cstime method in the Sys::Time::Tms is not supported on this system", FILE_NAME, __LINE__);
   return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
 #else
   void* obj_self = stack[0].oval;
