@@ -105,4 +105,52 @@ class TestCase::Sys::Time {
     return 1;
   }
 
+  static method times : int () {
+    
+    my $buffer = Sys::Time::Tms->new;
+    
+    my $tick = Sys::Time->times($buffer);
+    
+    warn $tick;
+    
+    unless ($tick >= 0) {
+      return 0;
+    }
+
+    warn $buffer->tms_utime;
+    
+    unless ($buffer->tms_utime > 0) {
+      return 0;
+    }
+    
+    warn $buffer->tms_stime;
+    
+    unless ($buffer->tms_stime >= 0) {
+      return 0;
+    }
+    
+    warn $buffer->tms_cutime;
+    
+    unless ($buffer->tms_cutime >= 0) {
+      return 0;
+    }
+    
+    warn $buffer->tms_cstime;
+    
+    unless ($buffer->tms_cstime >= 0) {
+      return 0;
+    }
+    
+    # The fields of the Sys::Time::Tms class
+    {
+      $buffer->set_tms_utime(0);
+      $buffer->set_tms_stime(0);
+      $buffer->set_tms_cutime(0);
+      $buffer->set_tms_cstime(0);
+    }
+    
+    return 1;
+  }
+
+
 }
